--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,10 @@
 			<optional>true</optional>
 		</dependency>
 		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-mail</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-crypto</artifactId>
 			<version>5.8.1</version> <!-- Make sure the version aligns with your Spring Boot version -->
