Updated Notification service to send mail at midnight.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,8 +13,9 @@ server.port=8080
 
 spring.mail.host=sandbox.smtp.mailtrap.io
 spring.mail.port=2525
-spring.mail.username=700964eceee73e
-spring.mail.password=c400936cafb72b
+spring.mail.username=054f5bf68db0e9
+spring.mail.password=e737ebdaaf3ddc
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
+logging.level.org.springframework.security=DEBUG
